--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,13 @@
     letter-spacing: 5px;
   }
 }
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge add Firefox */
+* {
+  -ms-overflow-style: none;
+  scrollbar-width: none; /* Firefox */
+}
